--- a/package.json
+++ b/package.json
@@ -48,8 +48,13 @@
     "tailwindcss": "^3.0.24"
   },
   "dependencies": {
+    "@lottiefiles/lottie-interactivity": "^1.6.0",
+    "@lottiefiles/react-lottie-player": "^3.4.7",
+    "@supabase/supabase-js": "^1.35.4",
     "astro-boilerplate-components": "^1.0.8",
-    "date-fns": "^2.28.0"
+    "date-fns": "^2.28.0",
+    "preact": "^10.8.2",
+    "react": "^18.2.0"
   },
   "author": "Ixartz (https://github.com/ixartz)"
 }
